...
import com.adevinta.spark.icons.SparkIcon

private enum class AlbumTab(
    val label: String,
    val icon: SparkIcon,
) {
    Albums(
        label = "Albums",
        icon = SparkIcon.Vector(Icons.AutoMirrored.Filled.List),
    ),
    Favorites(
        label = "Favorites",
        icon = SparkIcon.Vector(Icons.Default.Favorite),
    ),
}

@OptIn(
...
